services/demo-v73/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-v73-service
  namespace: demo-v73
  labels:
    app: demo-v73
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5050
    protocol: TCP
    name: http
  selector:
    app: demo-v73
